update docker commands in README

--- a/nfd_conf/nfd.conf
+++ b/nfd_conf/nfd.conf
@@ -37,8 +37,8 @@ log
   ;
   ; Example module-level settings:
   ;
-  ; FibManager DEBUG
-  ; Forwarder INFO
+  FibManager DEBUG
+  Forwarder INFO
 }
 
 ; The tables section configures the CS, PIT, FIB, Strategy Choice, and Measurements
